ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/TBM_DL_Master__c.object-meta.xml
<CustomObject>
    <label>TBM_DL_Master</label>
    <nameField>
        <label>TBM_DL_Master  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TBM_DL_Masters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>