ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/fields/BL_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_Code__c</fullName>
    <label>BL_Code</label>
    <referenceTo>Bl_Code_Details__c</referenceTo>
    <relationshipName>TBM_DL_Masters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>