ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/fields/DL_Code__c.field-meta.xml
<CustomField>
    <fullName>DL_Code__c</fullName>
    <externalId>true</externalId>
    <label>DL_Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>