ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/fields/Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Name__c</fullName>
    <label>Executive_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>