ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>1</length>
    <type>Text</type>
</CustomField>