ProdIND/ProdPrograms/force-app/main/default/objects/TBM_DL_Master__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>